force-app/main/default/objects/Merchandise__c/fields/total_price__c.field-meta.xml
<CustomField>
    <fullName>total_price__c</fullName>
    <label>total price</label>
    <length>70</length>
    <type>Text</type>
</CustomField>