force-app/main/default/objects/Merchandise__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>VehicleOld__c</referenceTo>
    <relationshipLabel>Merchandise</relationshipLabel>
    <relationshipName>Merchandise</relationshipName>
    <type>Lookup</type>
</CustomField>