force-app/main/default/objects/Merchandise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Price__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>